<resources>
    <string name="app_name">Watershed</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_main">Watershed</string>
    <string name="d1"> Open Camera </string>
    <string name="d2"> Open Gallery </string>
    <string name="d3"> Home </string>
    <string name="i1">Clear Image</string>
    <string name="i2">Rotate Image</string>
    <string name="i3">Enable button</string>
    <string name="i4">Set Hue Range</string>
    <string name="i5">Set threshold</string>
    <string name="i6">Disable button</string>
    <string name="title_activity_new_main_drawer">NewMainDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_final">FinalActivity</string>
    <string name="title_activity_final_screen">FinalScreen</string>
</resources>
